// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`componente GastosSumario con multiples gastos 1`] = `
<div>
  <h2>
    Viendo -
    2
    Gastos
     - Total -
    $1,209,329.29
  </h2>
</div>
`;

exports[`componente GastosSumario con un gasto 1`] = `
<div>
  <h2>
    Viendo -
    1
    Gasto
     - Total -
    $1.20
  </h2>
</div>
`;
